--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "jest-environment-node": "^24.5.0",
     "jest-to-match-shape-of": "^1.2.0",
     "jquery": "^3.3.1",
