--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.20",
     "path": "^0.12.7",
+    "pg": "^7.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-odometerjs": "^2.1.1",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "sequelize": "^5.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
