install progress dependency

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^5.4.20",
     "path": "^0.12.7",
     "pg": "^7.10.0",
+    "progress": "^2.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
