--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-cassandra": "^2.3.0",
     "faker": "^4.1.0",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
