install new relic

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.3.1",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.20",
+    "newrelic": "^5.7.0",
     "path": "^0.12.7",
     "pg": "^7.10.0",
     "progress": "^2.0.3",
